--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,38 @@
 version: '3.8'
 
 services:
+  app:
+    build: ./
+    command: ./app
+    ports:
+      - 8881:8881
+    depends_on:
+      - db
+    networks:
+      - backend
+  db:
+    restart: always
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_DB: "postgres"
+    ports:
+      - 6441:5432
+    networks:
+      - backend
   redis-view:
     image: redis:alpine
     ports:
       - "6381:6379"
+    networks:
+      - backend
   redis-post:
     image: redis:alpine
     ports:
       - "6380:6379"
+    networks:
+      - backend
+networks:
+  backend:
+    driver: bridge
